--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Emma Steimann <emmasteimann@gmail.com>
 Ewan Mellor <ewan.mellor@citrix.com>
 Gabriel Hurley <gabriel@strikeawe.com>
 Ghe Rivero <ghe@debian.org>
+Greg Althaus <galthaus@austin.rr.com>
 Hengqing Hu <hudayou@hotmail.com>
 Ivan Kolodyazhny <e0ne@e0ne.info>
 Jake Dahn <jake@ansolabs.com>
